@@ -5849,6 +5849,12 @@ string line 2\"
             : (.a*(b+c))+(.a*b+a*c)
           | Out$914
           )
+          (jsn$-1/2:"-0.5"|Out$915)
+          ( jsn$-1/3:"-3.33333333333333333333E-1"
+          | Out$916
+          )
+          (jsn$-3/2:"-1.5"|Out$917)
+          (jsn$-1/25:"-0.04"|Out$918)
       &   out
         $ ( str
           $ ( "Done. "
