@@ -1,3 +1,7 @@
+  20 April 2016
+Bug: jsn$-1/2 jsn$-1/25 returned deformed strings. (Only if denominator is 
+multiple of 2 and/or 5).
+
   12 April 2016
 Bug: (.B+C)+(.2*(U+Z))+(.A*E)+(.B+C) did not evaluate to an expression where
 the (.B+C) terms were combined. vgl() function was the culprit.
